# practice-problems

./: pyproject.toml
neetcode-150/: README.md
word-problems/backtracking-template/: backtrack.py
word-problems/caesar-cipher/: cipher.py
word-problems/id_allocator/: Id_allocator.py
word-problems/move_c_comments/: move_c_comments.py
word-problems/move_c_comments/__test__/: test_move_c_comments.py
word-problems/multi-thread/: pokemon_thread.py
word-problems/sequence-overlap-points/: sequence.py
word-problems/sq/: json_reader.py  sock_match.py  string_to_arr.py
word-problems/sq/__test__/: test_sock_match.py  test_string_to_arr.py
word-problems/string-shorten/: string-shorten.py
word-problems/word-transfo-search/: word.py
