[tool.poetry]
name = "practice-problems"
version = "0.1.0"
description = ""
authors = ["quincysoul <s@live.com>"]

[tool.poetry.dependencies]
python = "^3.10"
green = "^3.4.1"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
